<resources>
    <string name="app_name">icepop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_login.xml -->
    <string name="login_input_hint">아이디(이메일) 입력</string>
    <string name="password_input_hint">비밀번호 입력</string>

    <!-- fragment_signup.xml -->
    <string name="sign_up_text">회원가입</string>
    <string name="login_hint">아이디(이메일)</string>
    <string name="password_hint">비밀번호</string>
    <string name="login">로그인</string>
    <string name="nickname">닉네임(이름)</string>
    <string name="age_select">나이대 선택</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="join">가입하기</string>

    <string name="msg_email_edittext_empty">이메일이 비어있어서, 중복확인이 불가합니다.</string>
    <string name="msg_email_duplication_check_fail">이메일 중복확인에 실패했습니다.</string>
    <string name="msg_signup_fail">회원가입에 실패했습니다.</string>
    <string name="msg_email_check">중복확인 버튼을 눌러주세요.</string>
    <string name="msg_email_duplicate">중복된 이메일 입니다. 다시 입력해주세요.</string>
    <string name="msg_email_available">사용 가능한 이메일 입니다.</string>

    <!-- fragment_ice_cream_list.xml -->
    <string name="tab_type">타입별</string>
    <string name="tab_famous_type">인기순</string>
    <string name="tab_ai_recommend_type">AI 추천</string>

    <!-- menu/bottom.nav.xml-->
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="my_page">Mypage</string>

    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="forty_over">40 ~</string>

    <!-- type_array, fragment_ice_cream_list.xml -->
    <string name="ice_cream">아이스크림</string>
    <string name="cake">케이크</string>
    <string name="ready_pack">레디팩</string>
    <string name="init">초기화</string>

    <string-array name="gender_items">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string-array name="age_items" translatable="false">
        <item>@string/ten</item>
        <item>@string/twenty</item>
        <item>@string/thirty</item>
        <item>@string/forty_over</item>
    </string-array>

    <string-array name="type_array">
        <item>@string/ice_cream</item>
        <item>@string/cake</item>
        <item>@string/ready_pack</item>
        <item>@string/init</item>
    </string-array>

</resources>