<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.auth.SignupFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@color/title_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <!-- 아이디 입력 필드와 중복확인 버튼을 8:2 비율로 나누기 위한 LinearLayout -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center_vertical">

        <!-- 아이디 입력 필드 (8의 비율) -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginEnd="8dp"
            android:hint="@string/login_hint"
            style="@style/customMaterialTextField">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/meet_me" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 중복확인 버튼 (2의 비율) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/id_duplicate_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginTop="3dp"
            android:text="중복확인"
            android:textSize="14sp"
            style="@style/customMaterialButtonStyle" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_hint"
        style="@style/customMaterialTextField">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/meet_me" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nickname"
        style="@style/customMaterialTextField">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/meet_me" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedExposedDropdownMenuStyle"
        android:id="@+id/drop_down_text_input_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:hint="나이대 입력"
        app:hintTextColor="@color/primary_color"
        app:boxStrokeColor="@color/primary_color">
        <AutoCompleteTextView
            android:id="@+id/age_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:fontFamily="@font/meet_me"
            android:dropDownHeight="150dp"
            app:simpleItems="@array/age_items"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/gender_toggle_group"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:checkedButton="@+id/male_button">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/male_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/button_stroke_color"
            android:fontFamily="@font/meet_me"
            android:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/button_stroke_color"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/female_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/button_stroke_color"
            android:fontFamily="@font/meet_me"
            android:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/button_stroke_color"
            app:cornerRadius="5dp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        style="@style/customMaterialButtonStyle" />

</LinearLayout>